modified  home page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mountain Coffee - Authentic Taste of Africa</title>
+  <title>IU Coffee - Where Every Cup Tells a Story</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
+  <link rel="icon" type="image/png" href="assets/img/IU.png" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">☕ Mountain Coffee</h1>
+      <figure class="logo">
+        <img src="assets/img/IU.png" alt="IU Coffee Logo">
+        <h1 class="logo">IU Coffee</h1>
+      </figure>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="promo.html">Promotions</a></li>
         <li><a href="about.html">About</a></li>
@@ -24,25 +29,25 @@
   <main>
     <section class="banner">
       <header>
-        <h2>From the Mountains of Uganda to Your Cup</h2>
-        <p>Enjoy superior quality coffee, tea, and cocoa — grown ethically and sustainably.</p>
+        <h2>From IU University to Your Cup</h2>
+        <p>Born on campus, brewed with passion — experience warmth and creativity in every sip.</p>
         <a href="menu.html" class="btn">Discover Our Menu</a>
       </header>
     </section>
 
     <section class="products">
       <header>
-        <h2>Discover the Authentic Taste of Africa</h2>
-        <p class="intro">Explore our finest selection of African coffee blends and specialties.</p>
+        <h2>Handcrafted Coffee. Honest Origins.</h2>
+        <p class="intro">Our beans are ethically sourced, freshly roasted, and served with love — because every cup deserves a story.</p>
       </header>
 
       <section class="product-grid">
         <article class="card">
           <figure>
-            <img src="assets/img/home/coffee1.jpg" alt="African Espresso" />
+            <img src="assets/img/home/latte.jpg" alt="Signature Latte" />
             <figcaption>
-              <h3>African Espresso</h3>
-              <p>Strong and bold espresso beans with rich aroma.</p>
+              <h3>Signature Latte</h3>
+              <p>Our campus classic — smooth espresso and steamed milk crafted to perfection.</p>
               <a href="menu.html" class="btn-outline">View Details</a>
             </figcaption>
           </figure>
@@ -50,10 +55,10 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/coffee2.jpg" alt="Arabica Blend" />
+            <img src="assets/img/home/cold-brew.jpg" alt="Cold Brew" />
             <figcaption>
-              <h3>Arabica Blend</h3>
-              <p>Medium roast with smooth flavor and chocolate notes.</p>
+              <h3>Cold Brew</h3>
+              <p>Brewed slowly for 16 hours to unlock delicious, deep flavor and a refreshing finish.</p>
               <a href="menu.html" class="btn-outline">View Details</a>
             </figcaption>
           </figure>
@@ -61,10 +66,10 @@
 
         <article class="card">
           <figure>
-            <img src="assets/img/home/coffee3.jpg" alt="Premium Roast" />
+            <img src="assets/img/home/cappuchino.jpg" alt="Cappuccino Delight" />
             <figcaption>
-              <h3>Premium Roast</h3>
-              <p>Specialty beans carefully roasted for perfect balance.</p>
+              <h3>Cappuccino Delight</h3>
+              <p>A perfect harmony of espresso, milk, and foam — the taste that started it all.</p>
               <a href="menu.html" class="btn-outline">View Details</a>
             </figcaption>
           </figure>
@@ -74,64 +79,63 @@
 
     <section class="quality">
       <header>
-        <h2>Quality. Ethics. Sustainability.</h2>
+        <h2>Our Mission: Coffee, Community, and Care</h2>
       </header>
 
       <section class="features">
         <article class="feature-box">
-          <h3>Superior Quality</h3>
-          <p>We source only the finest beans from ethical farms.</p>
+          <h3>Fresh & Sustainable</h3>
+          <p>We roast in small batches using responsibly sourced beans for top-quality brews.</p>
         </article>
         <article class="feature-box">
-          <h3>Support for Farmers</h3>
-          <p>Empowering communities through fair trade practices.</p>
+          <h3>Community First</h3>
+          <p>IU Coffee is a space for students, locals, and dreamers to connect and recharge.</p>
         </article>
         <article class="feature-box">
-          <h3>Protecting the Environment</h3>
-          <p>Eco-friendly production and packaging at every step.</p>
+          <h3>Eco-Friendly Promise</h3>
+          <p>We use recyclable cups, eco-packaging, and strive toward zero waste daily.</p>
         </article>
       </section>
     </section>
 
     <section class="articles">
       <header>
-        <h2>Read Our Stories</h2>
+        <h2>Stories from IU Coffee</h2>
       </header>
 
       <section class="article-grid">
         <article>
           <figure>
-            <img src="assets/img/blog1.jpg" alt="Sustainable farming" />
+            <img src="assets/img/home/campus-coffee.jpg" alt="Campus Coffee" />
             <figcaption>
-              <h3>Sustainable Coffee Farming</h3>
-              <p>Learn how we maintain balance between quality and nature.</p>
+              <h3>From Campus Corner to Community Hub</h3>
+              <p>Discover how a small student café grew into a local favorite in just a few years.</p>
             </figcaption>
           </figure>
         </article>
 
         <article>
           <figure>
-            <img src="assets/img/blog2.jpg" alt="Local communities" />
+            <img src="assets/img/home/coffee-field.jpg" alt="Coffee field" />
             <figcaption>
-              <h3>Empowering Local Communities</h3>
-              <p>Our farmers are at the heart of our mission.</p>
+              <h3>Brewing a Greener Future</h3>
+              <p>Our commitment to sustainability and ethical sourcing in every single bean.</p>
             </figcaption>
           </figure>
         </article>
       </section>
 
       <footer>
-        <a href="blog.html" class="btn">Read More</a>
+        <a href="about.html" class="btn">Learn More About Us</a>
       </footer>
     </section>
   </main>
 
   <footer class="site-footer">
     <section class="footer-content">
-      <p>&copy; 2025 Mountain Coffee. All rights reserved.</p>
+      <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
-        <a href="policy.html">Privacy Policy</a> |
-        <a href="contact.html">Contact Us</a>
+        <a href="policy.html">Privacy Policy</a> 
       </nav>
     </section>
   </footer>
