modified menu page

--- a/map.html
+++ b/map.html
@@ -10,14 +10,17 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">☕ Mountain Coffee</h1>
+      <figure class="logo">
+        <img src="assets/img/IU.png" alt="IU Coffee Logo">
+        <h1 class="logo">IU Coffee</h1>
+      </figure>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="promo.html">Promotions</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="order.html">Order</a></li>
-        <li><a href="map.html" class="active">Map</a></li>
+        <li><a href="map.html">Map</a></li>
       </ul>
     </nav>
   </header>
