--- a/about.html
+++ b/about.html
@@ -10,12 +10,15 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">☕ Mountain Coffee</h1>
+      <figure class="logo">
+        <img src="assets/img/IU.png" alt="IU Coffee Logo">
+        <h1 class="logo">IU Coffee</h1>
+      </figure>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="promo.html">Promotions</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="order.html">Order</a></li>
         <li><a href="map.html">Map</a></li>
       </ul>
@@ -88,10 +91,9 @@
 
   <footer class="site-footer">
     <section class="footer-content">
-      <p>&copy; 2025 Mountain Coffee. All rights reserved.</p>
+      <p>&copy; 2025 IU Coffee. All rights reserved.</p>
       <nav>
-        <a href="policy.html">Privacy Policy</a> |
-        <a href="contact.html">Contact Us</a>
+        <a href="policy.html">Privacy Policy</a>
       </nav>
     </section>
   </footer>
