--- a/policy.html
+++ b/policy.html
@@ -9,9 +9,20 @@
 </head>
 <body>
   <header>
-    <h1>IU Coffee</h1>
-    <p>Your privacy and trust are important to us.</p>
-    <hr>
+    <nav class="navbar">
+      <figure class="logo">
+        <img src="assets/img/IU.png" alt="IU Coffee Logo">
+        <h1 class="logo">IU Coffee</h1>
+      </figure>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="promo.html">Promotions</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="order.html">Order</a></li>
+        <li><a href="map.html">Map</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
