modified promo, about, order, map

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Mountain Coffee</title>
+  <title>About Us | IU Coffee</title>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/about.css">
 </head>
@@ -28,16 +28,16 @@
   <main>
     <section class="banner">
       <header>
-        <h2>About Mountain Coffee</h2>
+        <h2>About IU Coffee</h2>
         <p>Where every cup tells a story — learn about our passion and commitment.</p>
         <a href="#story" class="btn">Our Story</a>
       </header>
     </section> 
 
-    <section id="story">
+    <section id="story" class="card">
       <h2>Our Story</h2>
       <p>
-        Mountain Coffee was founded in 2020 by a group of coffee lovers from 
+        IU Coffee was founded in 2020 by a group of coffee lovers from 
         <strong>IU University</strong> who wanted to bring warmth, creativity, and a touch of
         campus spirit to every cup. What began as a small corner café quickly grew
         into a beloved gathering spot for students, staff, and locals alike.
@@ -48,10 +48,10 @@
       </p>
     </section>
 
-    <section id="mission">
+    <section id="mission" class="card">
       <h2>Our Mission</h2>
       <p>
-        At Mountain Coffee, we believe coffee is more than a drink — it's a community.
+        At IU Coffee, we believe coffee is more than a drink — it's a community.
         We aim to provide:
       </p>
       <ul>
@@ -62,30 +62,21 @@
     </section>
 
     <section id="team">
-      <h2>Meet Our Team</h2>
-      <div class="team-grid">
-        <div class="card">
-          <img src="images/founder.jpg" alt="Founder" />
-          <h3>Anna Tran</h3>
-          <p>Founder & Head Barista</p>
-        </div>
-        <div class="card">
-          <img src="images/manager.jpg" alt="Manager" />
-          <h3>David Nguyen</h3>
-          <p>Store Manager</p>
-        </div>
-        <div class="card">
-          <img src="images/roaster.jpg" alt="Roaster" />
-          <h3>Mai Pham</h3>
-          <p>Master Coffee Roaster</p>
-        </div>
-      </div>
+      <h2>Meet Our Foundation</h2>
+      <section class="team-grid">
+        <article class="team-member">
+          <header>
+            <h3>Phan Tran Anh Quan</h3>
+            <p>Founder & Head Barista</p>
+          </header>
+        </article>
+      </section>
     </section>
 
     <section id="fun-fact">
       <h2>Fun Fact</h2>
       <p>Ever wonder what happens if we run out of coffee beans?</p>
-      <p >We simply rename the shop to <strong>IU Tea</strong> and pretend nothing happened. 🍵😎</p>
+      <p>We simply rename the shop to <strong>IU Tea</strong> and pretend nothing happened. 🍵😎</p>
     </section>
   </main>
 
