--- a/policy.html
+++ b/policy.html
@@ -87,10 +87,13 @@
     </section>
   </main>
 
-  <footer>
-    <hr>
-    <p>&copy; 2025 IU Coffee. All rights reserved.</p>
+  <footer class="site-footer">
+    <section class="footer-content">
+      <p>&copy; 2025 IU Coffee. All rights reserved.</p>
+      <nav>
+        <a href="policy.html">Privacy Policy</a> 
+      </nav>
+    </section>
   </footer>
-
 </body>
 </html>
